@@ -18,6 +18,7 @@ WriteMakefile(
         'Digest::Bcrypt' => 0,
         'Digest::SHA' => 5.74,
         'Data::Entropy' => 0.007,
+        'version' => 0.77,
     },
     dist  => { COMPRESS => 'gzip -9f', SUFFIX => 'gz', },
     clean => { FILES => 'Dancer2-Plugin-Passphrase-*' },
