@@ -6,6 +6,7 @@ use warnings;
 use Dancer2;
 use Dancer2::Plugin::Passphrase;
 use Encode;
+use version 0.77;
 
 # Unicode Character 'PILE OF POO'.
 my $secret      = "\x{1F4A9}";
@@ -40,5 +41,14 @@ like $@, qr/Wide character in subroutine entry/i, 'MD5 needs encoded text';
 my $bcrypt_utf8 = passphrase($utf8_secret)->generate({ algorithm => 'Bcrypt' })->rfc2307;
 
 ok(passphrase($utf8_secret)->matches($bcrypt_utf8),  'UTF8 matches UTF8 for Bcrypt');
+
+# Digest::Bcrypt at v1.210 switched to Crypt::Bcrypt backend, resulting in
+# a different exception
 eval { passphrase($secret)->generate({ algorithm => 'Bcrypt' })->rfc2307; };
-like $@, qr/input must contain only octets/i, 'Bcrypt needs encoded text';
+if ( version->parse($Digest::Bcrypt::VERSION) < version->parse(1.210) ) {
+
+    like $@, qr/input must contain only octets/i, 'Bcrypt needs encoded text';
+}
+else {
+    like $@, qr/Wide character in subroutine entry/i, 'Bcrypt needs encoded text';
+}
